import {
  renderAndroid,
  MIN_SDK_PACKAGE,
  MIN_SDK_VERSION,
} from '../src/render/android';
import { eventsFromFixture } from './helpers/fixtures';
import type { NormalizedEvent } from '../src/normalize/types';

describe('renderAndroid', () => {
  it.each(['simple-track.json', 'multi-version.json', 'with-refs.json'])(
    'matches the snapshot for %s',
    async (file) => {
      const src = await renderAndroid(eventsFromFixture(file));
      expect(src).toMatchSnapshot();
    },
  );

  it('emits a generated header with CLI and SDK versions', async () => {
    const src = await renderAndroid(eventsFromFixture('simple-track.json'));
    expect(src).toContain(
      'Generated by @ht-sdks/events-cli@0.1.0 — do not edit.',
    );
    expect(src).toContain(
      `Requires peer ${MIN_SDK_PACKAGE} v${MIN_SDK_VERSION} or later.`,
    );
  });

  it('emits package analytics and peer SDK imports', async () => {
    const src = await renderAndroid(eventsFromFixture('simple-track.json'));
    expect(src).toContain('package analytics;');
    expect(src).toContain('import com.hightouch.analytics.Analytics;');
    expect(src).toContain('public final class HtEvents');
  });

  it('emits camelCase methods and PascalCase payload types', async () => {
    const src = await renderAndroid(eventsFromFixture('simple-track.json'));
    expect(src).toMatch(/public static final class TrackOrderCompletedDefault/);
    expect(src).toMatch(
      /public void trackOrderCompletedDefault\(TrackOrderCompletedDefault properties, Options options\)/,
    );
    expect(src).toContain('analytics.track(');
  });

  it('sorts events by wrapperName', async () => {
    const events = eventsFromFixture('multi-version.json').reverse();
    const src = await renderAndroid(events);
    const v1 = src.indexOf('public void trackOrderCompletedV1(');
    const v2 = src.indexOf('public void trackOrderCompletedV2(');
    expect(v1).toBeGreaterThan(-1);
    expect(v2).toBeGreaterThan(-1);
    expect(v1).toBeLessThan(v2);
  });

  it('pins quicktype title to the wrapper type name', async () => {
    const event: NormalizedEvent = {
      type: 'track',
      name: 'Order Completed',
      version: 'v1',
      domainName: 'Orders',
      envelopeKey: 'properties',
      schema: {
        type: 'object',
        title: 'WrongTitle',
        properties: { orderId: { type: 'string' } },
      },
      wrapperName: 'trackOrderCompletedV1',
    };
    const src = await renderAndroid([event]);
    expect(src).toMatch(/public static final class TrackOrderCompletedV1/);
    expect(src).not.toMatch(/class WrongTitle/);
  });

  it('emits alias wrappers with newId, not a properties payload', async () => {
    const event: NormalizedEvent = {
      type: 'alias',
      version: 'default',
      domainName: 'Users',
      envelopeKey: 'properties',
      schema: { type: 'object' },
      wrapperName: 'aliasDefault',
    };
    const src = await renderAndroid([event]);
    expect(src).toContain(
      'public void aliasDefault(String newId, Options options)',
    );
    expect(src).toContain('analytics.alias(newId, injected.options);');
    expect(src).not.toMatch(/void aliasDefault\([^)]*properties/);
  });

  it('maps page events to screen', async () => {
    const event: NormalizedEvent = {
      type: 'page',
      name: 'Home',
      version: 'default',
      domainName: 'Web',
      envelopeKey: 'properties',
      schema: {
        type: 'object',
        properties: { path: { type: 'string' } },
      },
      wrapperName: 'pageHomeDefault',
    };
    const src = await renderAndroid([event]);
    expect(src).toContain('analytics.screen(null, "Home"');
    expect(src).not.toMatch(/analytics\.page\(/);
    expect(src).not.toContain('analytics.track("Home"');
  });

  it('emits a latest-version alias function', async () => {
    const src = await renderAndroid(eventsFromFixture('multi-version.json'));
    expect(src).toContain(
      'public void trackOrderCompleted(TrackOrderCompletedV2 properties, Options options)',
    );
    expect(src).toContain('trackOrderCompletedV2(properties, options);');
  });

  it('fails when generated method names collide', async () => {
    const events: NormalizedEvent[] = [
      {
        type: 'track',
        name: 'Foo',
        version: 'v1',
        domainName: 'A',
        envelopeKey: 'properties',
        schema: { type: 'object' },
        wrapperName: 'trackFoo',
        latestAlias: 'trackFoo',
      },
    ];
    await expect(renderAndroid(events)).rejects.toThrow(
      /Android identifier collision/,
    );
  });
});
