// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderAndroid matches the snapshot for multi-version.json 1`] = `
"// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer com.hightouch.analytics.android:analytics v0.1.0 or later.

package analytics;

import com.hightouch.analytics.Analytics;
import com.hightouch.analytics.Options;
import com.hightouch.analytics.Properties;
import com.hightouch.analytics.Traits;
import java.lang.reflect.Field;
import java.lang.reflect.Modifier;
import java.util.ArrayList;
import java.util.Arrays;
import java.util.Collection;
import java.util.LinkedHashMap;
import java.util.List;
import java.util.Map;

public final class HtEvents {
    public static final class TrackOrderCompletedV1 {
        private String orderId;

        public String getOrderId() { return orderId; }
        public void setOrderId(String value) { this.orderId = value; }
    }

    public static final class TrackOrderCompletedV2 {
        private String orderId;
        private Double total;

        public String getOrderId() { return orderId; }
        public void setOrderId(String value) { this.orderId = value; }

        public Double getTotal() { return total; }
        public void setTotal(Double value) { this.total = value; }
    }

    @SuppressWarnings("unchecked")
    private static Map<String, Object> cloneMap(Map<String, Object> map) {
        Map<String, Object> out = new LinkedHashMap<>();
        if (map == null) {
            return out;
        }
        for (Map.Entry<String, Object> entry : map.entrySet()) {
            out.put(entry.getKey(), entry.getValue());
        }
        return out;
    }

    @SuppressWarnings("unchecked")
    private static Map<String, Object> setAtPath(
            Map<String, Object> root, String[] path, String value) {
        if (path == null || path.length == 0) {
            return root;
        }
        Map<String, Object> clone = cloneMap(root);
        Map<String, Object> cursor = clone;
        for (int i = 0; i < path.length - 1; i++) {
            String key = path[i];
            Object existing = cursor.get(key);
            Map<String, Object> child;
            if (existing instanceof Map) {
                child = cloneMap((Map<String, Object>) existing);
            } else {
                child = new LinkedHashMap<>();
            }
            cursor.put(key, child);
            cursor = child;
        }
        cursor.put(path[path.length - 1], value);
        return clone;
    }

    @SuppressWarnings("unchecked")
    private static Object convertValue(Object value) {
        if (value instanceof String
                || value instanceof Number
                || value instanceof Boolean) {
            return value;
        }
        if (value instanceof Map) {
            Map<String, Object> out = new LinkedHashMap<>();
            for (Map.Entry<?, ?> entry : ((Map<?, ?>) value).entrySet()) {
                if (entry.getKey() == null || entry.getValue() == null) {
                    continue;
                }
                out.put(String.valueOf(entry.getKey()), convertValue(entry.getValue()));
            }
            return out;
        }
        if (value instanceof Collection) {
            List<Object> out = new ArrayList<>();
            for (Object item : (Collection<?>) value) {
                if (item != null) {
                    out.add(convertValue(item));
                }
            }
            return out;
        }
        if (value.getClass().isEnum()) {
            return value.toString();
        }
        if (value.getClass().getEnclosingClass() == HtEvents.class) {
            return toMap(value);
        }
        return value;
    }

    private static Map<String, Object> toMap(Object value) {
        Map<String, Object> out = new LinkedHashMap<>();
        if (value == null) {
            return out;
        }
        if (value instanceof Map) {
            @SuppressWarnings("unchecked")
            Map<String, Object> map = (Map<String, Object>) value;
            return cloneMap(map);
        }
        for (Field field : value.getClass().getDeclaredFields()) {
            int modifiers = field.getModifiers();
            if (Modifier.isStatic(modifiers) || field.isSynthetic()) {
                continue;
            }
            field.setAccessible(true);
            Object fieldValue;
            try {
                fieldValue = field.get(value);
            } catch (IllegalAccessException e) {
                continue;
            }
            if (fieldValue == null) {
                continue;
            }
            out.put(field.getName(), convertValue(fieldValue));
        }
        return out;
    }

    private static Properties toProperties(Map<String, Object> data) {
        Properties properties = new Properties();
        if (data != null) {
            properties.putAll(data);
        }
        return properties;
    }

    private static Traits toTraits(Map<String, Object> data) {
        Traits traits = new Traits();
        if (data != null) {
            traits.putAll(data);
        }
        return traits;
    }

    private static Options optionsWithContext(
            Options options, Map<String, Object> context) {
        Map<String, Object> integrations =
                options == null
                        ? new LinkedHashMap<String, Object>()
                        : cloneMap(options.integrations());
        return new Options(integrations, context);
    }

    private static final class Injected {
        final Map<String, Object> data;
        final Options options;

        Injected(Map<String, Object> data, Options options) {
            this.data = data;
            this.options = options;
        }
    }

    private static Injected withSchemaVersion(
            Map<String, Object> data,
            Options options,
            String[] path,
            String version,
            String envelopeKey) {
        if (path == null || path.length == 0) {
            return new Injected(data, options);
        }
        String head = path[0];
        String[] rest = Arrays.copyOfRange(path, 1, path.length);
        if (head.equals(envelopeKey)) {
            return new Injected(setAtPath(cloneMap(data), rest, version), options);
        }
        if (head.equals("context")) {
            Map<String, Object> ctx =
                    options == null
                            ? new LinkedHashMap<String, Object>()
                            : cloneMap(options.context());
            return new Injected(data, optionsWithContext(options, setAtPath(ctx, rest, version)));
        }
        return new Injected(data, options);
    }

    private final Analytics analytics;

    public HtEvents(Analytics analytics) {
        this.analytics = analytics;
    }

    public void trackOrderCompletedV1(TrackOrderCompletedV1 properties) {
        trackOrderCompletedV1(properties, null);
    }

    public void trackOrderCompletedV1(TrackOrderCompletedV1 properties, Options options) {
        Injected injected = withSchemaVersion(
                toMap(properties),
                options,
                new String[] {},
                "v1",
                "properties");
        analytics.track("Order Completed", toProperties(injected.data), injected.options);
    }

    public void trackOrderCompletedV2(TrackOrderCompletedV2 properties) {
        trackOrderCompletedV2(properties, null);
    }

    public void trackOrderCompletedV2(TrackOrderCompletedV2 properties, Options options) {
        Injected injected = withSchemaVersion(
                toMap(properties),
                options,
                new String[] {},
                "v2",
                "properties");
        analytics.track("Order Completed", toProperties(injected.data), injected.options);
    }

    public void trackOrderCompleted(TrackOrderCompletedV2 properties) {
        trackOrderCompleted(properties, null);
    }

    public void trackOrderCompleted(TrackOrderCompletedV2 properties, Options options) {
        trackOrderCompletedV2(properties, options);
    }
}
"
`;

exports[`renderAndroid matches the snapshot for simple-track.json 1`] = `
"// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer com.hightouch.analytics.android:analytics v0.1.0 or later.

package analytics;

import com.hightouch.analytics.Analytics;
import com.hightouch.analytics.Options;
import com.hightouch.analytics.Properties;
import com.hightouch.analytics.Traits;
import java.lang.reflect.Field;
import java.lang.reflect.Modifier;
import java.util.ArrayList;
import java.util.Arrays;
import java.util.Collection;
import java.util.LinkedHashMap;
import java.util.List;
import java.util.Map;

public final class HtEvents {
    public static final class TrackOrderCompletedDefault {
        private String orderId;
        private Double total;

        public String getOrderId() { return orderId; }
        public void setOrderId(String value) { this.orderId = value; }

        public Double getTotal() { return total; }
        public void setTotal(Double value) { this.total = value; }
    }

    @SuppressWarnings("unchecked")
    private static Map<String, Object> cloneMap(Map<String, Object> map) {
        Map<String, Object> out = new LinkedHashMap<>();
        if (map == null) {
            return out;
        }
        for (Map.Entry<String, Object> entry : map.entrySet()) {
            out.put(entry.getKey(), entry.getValue());
        }
        return out;
    }

    @SuppressWarnings("unchecked")
    private static Map<String, Object> setAtPath(
            Map<String, Object> root, String[] path, String value) {
        if (path == null || path.length == 0) {
            return root;
        }
        Map<String, Object> clone = cloneMap(root);
        Map<String, Object> cursor = clone;
        for (int i = 0; i < path.length - 1; i++) {
            String key = path[i];
            Object existing = cursor.get(key);
            Map<String, Object> child;
            if (existing instanceof Map) {
                child = cloneMap((Map<String, Object>) existing);
            } else {
                child = new LinkedHashMap<>();
            }
            cursor.put(key, child);
            cursor = child;
        }
        cursor.put(path[path.length - 1], value);
        return clone;
    }

    @SuppressWarnings("unchecked")
    private static Object convertValue(Object value) {
        if (value instanceof String
                || value instanceof Number
                || value instanceof Boolean) {
            return value;
        }
        if (value instanceof Map) {
            Map<String, Object> out = new LinkedHashMap<>();
            for (Map.Entry<?, ?> entry : ((Map<?, ?>) value).entrySet()) {
                if (entry.getKey() == null || entry.getValue() == null) {
                    continue;
                }
                out.put(String.valueOf(entry.getKey()), convertValue(entry.getValue()));
            }
            return out;
        }
        if (value instanceof Collection) {
            List<Object> out = new ArrayList<>();
            for (Object item : (Collection<?>) value) {
                if (item != null) {
                    out.add(convertValue(item));
                }
            }
            return out;
        }
        if (value.getClass().isEnum()) {
            return value.toString();
        }
        if (value.getClass().getEnclosingClass() == HtEvents.class) {
            return toMap(value);
        }
        return value;
    }

    private static Map<String, Object> toMap(Object value) {
        Map<String, Object> out = new LinkedHashMap<>();
        if (value == null) {
            return out;
        }
        if (value instanceof Map) {
            @SuppressWarnings("unchecked")
            Map<String, Object> map = (Map<String, Object>) value;
            return cloneMap(map);
        }
        for (Field field : value.getClass().getDeclaredFields()) {
            int modifiers = field.getModifiers();
            if (Modifier.isStatic(modifiers) || field.isSynthetic()) {
                continue;
            }
            field.setAccessible(true);
            Object fieldValue;
            try {
                fieldValue = field.get(value);
            } catch (IllegalAccessException e) {
                continue;
            }
            if (fieldValue == null) {
                continue;
            }
            out.put(field.getName(), convertValue(fieldValue));
        }
        return out;
    }

    private static Properties toProperties(Map<String, Object> data) {
        Properties properties = new Properties();
        if (data != null) {
            properties.putAll(data);
        }
        return properties;
    }

    private static Traits toTraits(Map<String, Object> data) {
        Traits traits = new Traits();
        if (data != null) {
            traits.putAll(data);
        }
        return traits;
    }

    private static Options optionsWithContext(
            Options options, Map<String, Object> context) {
        Map<String, Object> integrations =
                options == null
                        ? new LinkedHashMap<String, Object>()
                        : cloneMap(options.integrations());
        return new Options(integrations, context);
    }

    private static final class Injected {
        final Map<String, Object> data;
        final Options options;

        Injected(Map<String, Object> data, Options options) {
            this.data = data;
            this.options = options;
        }
    }

    private static Injected withSchemaVersion(
            Map<String, Object> data,
            Options options,
            String[] path,
            String version,
            String envelopeKey) {
        if (path == null || path.length == 0) {
            return new Injected(data, options);
        }
        String head = path[0];
        String[] rest = Arrays.copyOfRange(path, 1, path.length);
        if (head.equals(envelopeKey)) {
            return new Injected(setAtPath(cloneMap(data), rest, version), options);
        }
        if (head.equals("context")) {
            Map<String, Object> ctx =
                    options == null
                            ? new LinkedHashMap<String, Object>()
                            : cloneMap(options.context());
            return new Injected(data, optionsWithContext(options, setAtPath(ctx, rest, version)));
        }
        return new Injected(data, options);
    }

    private final Analytics analytics;

    public HtEvents(Analytics analytics) {
        this.analytics = analytics;
    }

    public void trackOrderCompletedDefault(TrackOrderCompletedDefault properties) {
        trackOrderCompletedDefault(properties, null);
    }

    public void trackOrderCompletedDefault(TrackOrderCompletedDefault properties, Options options) {
        Injected injected = withSchemaVersion(
                toMap(properties),
                options,
                new String[] {"context", "protocols", "schemaVersion"},
                "default",
                "properties");
        analytics.track("Order Completed", toProperties(injected.data), injected.options);
    }

    public void trackOrderCompleted(TrackOrderCompletedDefault properties) {
        trackOrderCompleted(properties, null);
    }

    public void trackOrderCompleted(TrackOrderCompletedDefault properties, Options options) {
        trackOrderCompletedDefault(properties, options);
    }
}
"
`;

exports[`renderAndroid matches the snapshot for with-refs.json 1`] = `
"// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer com.hightouch.analytics.android:analytics v0.1.0 or later.

package analytics;

import com.hightouch.analytics.Analytics;
import com.hightouch.analytics.Options;
import com.hightouch.analytics.Properties;
import com.hightouch.analytics.Traits;
import java.lang.reflect.Field;
import java.lang.reflect.Modifier;
import java.util.ArrayList;
import java.util.Arrays;
import java.util.Collection;
import java.util.LinkedHashMap;
import java.util.List;
import java.util.Map;

public final class HtEvents {
    public static final class IdentifyDefault {
        private String email;

        public String getEmail() { return email; }
        public void setEmail(String value) { this.email = value; }
    }

    public static final class TrackCartViewedDefault {
        private Double amount;
        private String currency;
        private Double itemCount;

        public Double getAmount() { return amount; }
        public void setAmount(Double value) { this.amount = value; }

        public String getCurrency() { return currency; }
        public void setCurrency(String value) { this.currency = value; }

        public Double getItemCount() { return itemCount; }
        public void setItemCount(Double value) { this.itemCount = value; }
    }

    @SuppressWarnings("unchecked")
    private static Map<String, Object> cloneMap(Map<String, Object> map) {
        Map<String, Object> out = new LinkedHashMap<>();
        if (map == null) {
            return out;
        }
        for (Map.Entry<String, Object> entry : map.entrySet()) {
            out.put(entry.getKey(), entry.getValue());
        }
        return out;
    }

    @SuppressWarnings("unchecked")
    private static Map<String, Object> setAtPath(
            Map<String, Object> root, String[] path, String value) {
        if (path == null || path.length == 0) {
            return root;
        }
        Map<String, Object> clone = cloneMap(root);
        Map<String, Object> cursor = clone;
        for (int i = 0; i < path.length - 1; i++) {
            String key = path[i];
            Object existing = cursor.get(key);
            Map<String, Object> child;
            if (existing instanceof Map) {
                child = cloneMap((Map<String, Object>) existing);
            } else {
                child = new LinkedHashMap<>();
            }
            cursor.put(key, child);
            cursor = child;
        }
        cursor.put(path[path.length - 1], value);
        return clone;
    }

    @SuppressWarnings("unchecked")
    private static Object convertValue(Object value) {
        if (value instanceof String
                || value instanceof Number
                || value instanceof Boolean) {
            return value;
        }
        if (value instanceof Map) {
            Map<String, Object> out = new LinkedHashMap<>();
            for (Map.Entry<?, ?> entry : ((Map<?, ?>) value).entrySet()) {
                if (entry.getKey() == null || entry.getValue() == null) {
                    continue;
                }
                out.put(String.valueOf(entry.getKey()), convertValue(entry.getValue()));
            }
            return out;
        }
        if (value instanceof Collection) {
            List<Object> out = new ArrayList<>();
            for (Object item : (Collection<?>) value) {
                if (item != null) {
                    out.add(convertValue(item));
                }
            }
            return out;
        }
        if (value.getClass().isEnum()) {
            return value.toString();
        }
        if (value.getClass().getEnclosingClass() == HtEvents.class) {
            return toMap(value);
        }
        return value;
    }

    private static Map<String, Object> toMap(Object value) {
        Map<String, Object> out = new LinkedHashMap<>();
        if (value == null) {
            return out;
        }
        if (value instanceof Map) {
            @SuppressWarnings("unchecked")
            Map<String, Object> map = (Map<String, Object>) value;
            return cloneMap(map);
        }
        for (Field field : value.getClass().getDeclaredFields()) {
            int modifiers = field.getModifiers();
            if (Modifier.isStatic(modifiers) || field.isSynthetic()) {
                continue;
            }
            field.setAccessible(true);
            Object fieldValue;
            try {
                fieldValue = field.get(value);
            } catch (IllegalAccessException e) {
                continue;
            }
            if (fieldValue == null) {
                continue;
            }
            out.put(field.getName(), convertValue(fieldValue));
        }
        return out;
    }

    private static Properties toProperties(Map<String, Object> data) {
        Properties properties = new Properties();
        if (data != null) {
            properties.putAll(data);
        }
        return properties;
    }

    private static Traits toTraits(Map<String, Object> data) {
        Traits traits = new Traits();
        if (data != null) {
            traits.putAll(data);
        }
        return traits;
    }

    private static Options optionsWithContext(
            Options options, Map<String, Object> context) {
        Map<String, Object> integrations =
                options == null
                        ? new LinkedHashMap<String, Object>()
                        : cloneMap(options.integrations());
        return new Options(integrations, context);
    }

    private static final class Injected {
        final Map<String, Object> data;
        final Options options;

        Injected(Map<String, Object> data, Options options) {
            this.data = data;
            this.options = options;
        }
    }

    private static Injected withSchemaVersion(
            Map<String, Object> data,
            Options options,
            String[] path,
            String version,
            String envelopeKey) {
        if (path == null || path.length == 0) {
            return new Injected(data, options);
        }
        String head = path[0];
        String[] rest = Arrays.copyOfRange(path, 1, path.length);
        if (head.equals(envelopeKey)) {
            return new Injected(setAtPath(cloneMap(data), rest, version), options);
        }
        if (head.equals("context")) {
            Map<String, Object> ctx =
                    options == null
                            ? new LinkedHashMap<String, Object>()
                            : cloneMap(options.context());
            return new Injected(data, optionsWithContext(options, setAtPath(ctx, rest, version)));
        }
        return new Injected(data, options);
    }

    private final Analytics analytics;

    public HtEvents(Analytics analytics) {
        this.analytics = analytics;
    }

    public void identifyDefault(IdentifyDefault traits) {
        identifyDefault(traits, null);
    }

    public void identifyDefault(IdentifyDefault traits, Options options) {
        Injected injected = withSchemaVersion(
                toMap(traits),
                options,
                new String[] {},
                "default",
                "traits");
        analytics.identify(null, toTraits(injected.data), injected.options);
    }

    public void identifyDefault(String userId, IdentifyDefault traits) {
        identifyDefault(userId, traits, null);
    }

    public void identifyDefault(String userId, IdentifyDefault traits, Options options) {
        Injected injected = withSchemaVersion(
                toMap(traits),
                options,
                new String[] {},
                "default",
                "traits");
        analytics.identify(userId, toTraits(injected.data), injected.options);
    }

    public void identify(IdentifyDefault traits) {
        identify(traits, null);
    }

    public void identify(IdentifyDefault traits, Options options) {
        identifyDefault(traits, options);
    }

    public void identify(String userId, IdentifyDefault traits) {
        identify(userId, traits, null);
    }

    public void identify(String userId, IdentifyDefault traits, Options options) {
        identifyDefault(userId, traits, options);
    }

    public void trackCartViewedDefault(TrackCartViewedDefault properties) {
        trackCartViewedDefault(properties, null);
    }

    public void trackCartViewedDefault(TrackCartViewedDefault properties, Options options) {
        Injected injected = withSchemaVersion(
                toMap(properties),
                options,
                new String[] {},
                "default",
                "properties");
        analytics.track("Cart Viewed", toProperties(injected.data), injected.options);
    }

    public void trackCartViewed(TrackCartViewedDefault properties) {
        trackCartViewed(properties, null);
    }

    public void trackCartViewed(TrackCartViewedDefault properties, Options options) {
        trackCartViewedDefault(properties, options);
    }
}
"
`;
